20031128 fuse.c: initialise the poke finder on startup.
20031128 ui/gtk/gtkui.c: split create_dialog into multiple functions.
20031201 spec16.c: ensure we have a prototype for memset().
20031202 Some --enable-warnings tidy-ups.
20031202 machine.c: fix a small (but definite) memory leak.
20031203 ui/gtk/debugger.c: add ability to turn individual 'panes' on and
	 off.
20031206 event.[ch], ui/gtk/debugger.c: add a 'pending events' pane to the
	 debugger.
20031207 event.[ch]: use the defined enum for event type variables.
20031209 ui/gtk/gtkjoystick.c: fix filename in initial comment.
20031209 ChangeLog: bring up-to-date.
20031214 widget/filesel.c: on Win32, chdir does not return ENOTDIR for not
	 a directory, so check explicitly (Marek).
20031214 fuse.c, spectrum.c: DirectX sound routines do not provide timing
	 control, so always use the timer_* routines.
20031214 Generalise the low-level sound routines.
20031215 machine.c: remove unused #includes.
20031216 ui/svga/svgajoystick.c: remove use of BYTE, WORD (Witold).
20031226 ui/gtk/debugger.c: use a smaller monospaced font under GTK 2.
20031227 Add reverse page mappings to the memory_page structure.
20031227 display.c, memory.c: make writes to the screen work when the
	 screen is paged in other than at 0x4000.
20031227 ui/gtk/debugger.c, debugger/: add page-specific breakpoints.
20031227 debugger/debugger{,_internals}.h, ui/gtk/pokefinder.c: add ability
	 to set write breakpoints by clicking on the appropriate 'possible'.
20031228 ui/gtk/debugger.c, ui/gtk/pokefinder.c: update the debugger display
	 after adding a breakpoint with the pokefinder.
20031228 sound.c: add dummy functions for when we don't have a sound device
	 (fixes bug #866403).
20031228 fuse.c: must call machine_init_machines() before tape_init()
	 (Witold).
20031228 ui/gtk/{Makefile.am,fileselector.c,gtkui.c}: make the GTK+
	 fileselector remember its previous directory. Also move the
	 fileselector code into its own file and tidy up a bit.